# Haystack

./: .gitignore  README.en.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: install-pf-redirect.js
src/: api.js  index.html  updater.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  protocol.rs  server.rs
